src/objects/loan__N1_Segment__c.object
<CustomObject>
    <description>Metro 2 N1 Segment Object.</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>N1 Segments</relationshipLabel>
        <relationshipName>N1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>N1 Segments</relationshipLabel>
        <relationshipName>N1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Employer_City__c</fullName>
        <label>Employer City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Employer_State__c</fullName>
        <label>Employer State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Employer_Zip_Code__c</fullName>
        <label>Employer Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__First_Line_of_Employer_Address__c</fullName>
        <label>First Line of Employer Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Occupation__c</fullName>
        <label>Occupation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved__c</fullName>
        <label>Reserved</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Second_Line_of_Employer_Address__c</fullName>
        <label>Second Line of Employer Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>N1 Segment</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>N1 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>